// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`throws error on unescaped double quote string inputs " 1`] = `
"Argument 0 of md5 failed the validation: Error: Your value, '"', has unescaped double quotes in it, so it cannot be used as a value.

To safely use the value, use Fn.rawString on your string, like so:

Fn.rawString('"')

Doing this ensures CDKTF and Terraform interpret your values correctly.

To learn more about built in Terraform functions within CDKTF, refer to: https://developer.hashicorp.com/terraform/cdktf/concepts/functions
. Please change your code to pass a valid value for this argument."
`;

exports[`throws error on unescaped double quote string inputs \\ \\\\" 1`] = `
"Argument 0 of md5 failed the validation: Error: Your value, '\\ \\\\"', has unescaped double quotes in it, so it cannot be used as a value.

To safely use the value, use Fn.rawString on your string, like so:

Fn.rawString('\\ \\\\"')

Doing this ensures CDKTF and Terraform interpret your values correctly.

To learn more about built in Terraform functions within CDKTF, refer to: https://developer.hashicorp.com/terraform/cdktf/concepts/functions
. Please change your code to pass a valid value for this argument."
`;

exports[`throws error on unescaped double quote string inputs \\\\" 1`] = `
"Argument 0 of md5 failed the validation: Error: Your value, '\\\\"', has unescaped double quotes in it, so it cannot be used as a value.

To safely use the value, use Fn.rawString on your string, like so:

Fn.rawString('\\\\"')

Doing this ensures CDKTF and Terraform interpret your values correctly.

To learn more about built in Terraform functions within CDKTF, refer to: https://developer.hashicorp.com/terraform/cdktf/concepts/functions
. Please change your code to pass a valid value for this argument."
`;

exports[`throws error on unescaped double quote string inputs \\\\\\\\" 1`] = `
"Argument 0 of md5 failed the validation: Error: Your value, '\\\\\\\\"', has unescaped double quotes in it, so it cannot be used as a value.

To safely use the value, use Fn.rawString on your string, like so:

Fn.rawString('\\\\\\\\"')

Doing this ensures CDKTF and Terraform interpret your values correctly.

To learn more about built in Terraform functions within CDKTF, refer to: https://developer.hashicorp.com/terraform/cdktf/concepts/functions
. Please change your code to pass a valid value for this argument."
`;

exports[`throws no error on valid escaped double quote string inputs  1`] = `
"{
  "output": {
    "test-output": {
      "value": "\${md5(\\"\\")}"
    }
  }
}"
`;

exports[`throws no error on valid escaped double quote string inputs \\ \\" 1`] = `
"{
  "output": {
    "test-output": {
      "value": "\${md5(\\"\\\\ \\\\\\"\\")}"
    }
  }
}"
`;

exports[`throws no error on valid escaped double quote string inputs \\ \\\\\\" 1`] = `
"{
  "output": {
    "test-output": {
      "value": "\${md5(\\"\\\\ \\\\\\\\\\\\\\"\\")}"
    }
  }
}"
`;

exports[`throws no error on valid escaped double quote string inputs \\" 1`] = `
"{
  "output": {
    "test-output": {
      "value": "\${md5(\\"\\\\\\"\\")}"
    }
  }
}"
`;

exports[`throws no error on valid escaped double quote string inputs \\\\\\" 1`] = `
"{
  "output": {
    "test-output": {
      "value": "\${md5(\\"\\\\\\\\\\\\\\"\\")}"
    }
  }
}"
`;

exports[`throws no error on valid escaped double quote string inputs \\\\abc\\\\def\\\\ 1`] = `
"{
  "output": {
    "test-output": {
      "value": "\${md5(\\"\\\\\\\\abc\\\\\\\\def\\\\\\\\\\")}"
    }
  }
}"
`;

exports[`throws no error on valid escaped double quote string inputs \\abc\\def\\ 1`] = `
"{
  "output": {
    "test-output": {
      "value": "\${md5(\\"\\\\abc\\\\def\\\\\\")}"
    }
  }
}"
`;
